--- a/src/app/components/eletction/eletction.component.scss
+++ b/src/app/components/eletction/eletction.component.scss
@@ -18,7 +18,8 @@
   position:absolute; /*it can be fixed too*/
   left:0; right:0;
   margin:auto;
-  margin-top: 5%;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 
