--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -42,7 +42,7 @@
         <div *ngIf="!elecitonIsEnd(mainElection.voting_ends_at)">
         <button mat-icon-button disabled class="end" style="color: #88ff02;">
           <mat-icon aria-hidden="false">timer</mat-icon>
-          Encerramento: {{mainElection.voting_ends_at | date:'dd/MM/yyyy - h:mm'}}h
+          Encerramento: {{mainElection.voting_ends_at | date:'dd/MM/yyyy - H:mm'}}h
         </button>
         </div>
         <div *ngIf="elecitonIsEnd(mainElection.voting_ends_at)" class="electionActions">
