Refatorado permissão botões

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,7 +19,7 @@
         <mat-card-title>{{mainElection.name}}</mat-card-title>
         <p><mat-card-subtitle class="subtitle">Criado(a) por: {{mainElection.admin}}</mat-card-subtitle></p>
         <span class="example-spacer"></span>
-        <button mat-icon-button (click)="freeze()" *ngIf="isNotFreeze()">
+        <button mat-icon-button (click)="freeze()" *ngIf="hasAdmin() && isNotFreeze()">
           <mat-icon aria-hidden="false">ac_unit</mat-icon>
         </button>
         <!-- <button mat-icon-button *ngIf="hasAdmin()">
