--- a/src/app/components/booth/booth.component.scss
+++ b/src/app/components/booth/booth.component.scss
@@ -1,28 +1,34 @@
 .login-box {
-  position:absolute; /*it can be fixed too*/
   width: 90%;
-  max-width: 800px;
-  height: 350px;
-  left:0; right:0; top:0; bottom:0;
+  position:absolute; /*it can be fixed too*/
+  left:0; right:0;
   margin:auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .title {
   width: 100%;
 }
 
-.boothForm {
-  position: absolute;
-  max-height: 347px;
-  left: 0; right: 0; bottom: 20px; top: 50px;
-  overflow-y: scroll;
-}
-
-// .netxBtn {
-//   position: absolute;
-//   right: 20px
-// }
-
 .questionTitle {
   margin: 0px;
+}
+
+.loading {
+  width: 100px;
+  height: 100px;
+
+  position:absolute; /*it can be fixed too*/
+  left:0; right:0;
+  top:0; bottom:0;
+  margin:auto;
+  z-index: 20;
+}
+
+.hashBooth {
+  background: white;
+  color: black;
+  text-align: center;
+  margin: 10px;
 }
