Auditoria de eleição feita

--- a/src/app/components/verifier/verifier.component.html
+++ b/src/app/components/verifier/verifier.component.html
@@ -1,1 +1,2 @@
 <button mat-button color="primary" (click)="verify()">asdasd</button>
+<p *ngFor="let l of results" style="padding: 10px;margin:0px;">{{l}}</p>
