--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -2,7 +2,7 @@
   <button mat-icon-button (click)="toggleSidenav()">
     <mat-icon aria-hidden="false">menu</mat-icon>
   </button>
-  <span>Noiz</span>
+  <!-- <span>Noiz</span> -->
   <span class="example-spacer"></span>
   <button mat-icon-button (click)="logout()">
     <mat-icon aria-hidden="false">exit_to_app</mat-icon>
