--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,1 +1,5 @@
-<p>menu works!</p>
+<div style="width: 100%; text-align:center">
+  <img mat-card-image src="assets/images/branco.png" style="width: 200px">
+</div>
+<mat-expansion-panel [disabled]="isDisabled">
+</mat-expansion-panel>
