--- a/src/app/components/verifier/verifier.component.html
+++ b/src/app/components/verifier/verifier.component.html
@@ -1,2 +1,30 @@
 <button mat-button color="primary" (click)="verify()">asdasd</button>
-<p *ngFor="let l of results" style="padding: 10px;margin:0px;">{{l}}</p>
+{{logger.setColumns(3) | json}}
+<table mat-table [dataSource]="logger.get()" class="mat-elevation-z8">
+    
+    <!-- Position Column -->
+    <!-- <ng-container matColumnDef="Cédula">
+      <th mat-header-cell *matHeaderCellDef> Log </th>
+      <td mat-cell *matCellDef="let element"> {{element}} </td>
+    </ng-container> -->
+
+    <div *ngFor="let c of logger.setColumns(nAnswers)">
+        <div *ngIf="c === 'Cédula'">
+            <ng-container matColumnDef={{c}}>
+                <th mat-header-cell *matHeaderCellDef> {{c}} </th>
+                <td mat-cell *matCellDef="let element"> {{element.hash}} </td>
+            </ng-container>
+        </div>
+        <div *ngIf="c != 'Cédula'">
+            <ng-container matColumnDef={{c}}>
+                <th mat-header-cell *matHeaderCellDef> {{c}} </th>
+                <td mat-cell *matCellDef="let element"> {{element.answers[index]}} </td>
+            </ng-container>
+        </div>
+    </div>
+
+    <tr mat-header-row *matHeaderRowDef="logger.setColumns(nAnswers)"></tr>
+    <tr mat-row *matRowDef="let row; columns: logger.setColumns(nAnswers);"></tr>
+</table>
+
+<!-- <p *ngFor="let l of logs" style="padding: 10px;margin:0px;">{{l}}</p> -->
