--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -69,7 +69,7 @@
   </mat-menu>
 
   <mat-menu #menuCreate="matMenu">
-    <button mat-menu-item [routerLink]="['/elections/new']">
+    <button mat-menu-item [routerLink]="['/elections']">
       <mat-icon>how_to_vote</mat-icon>
       <span>Eleição</span>
     </button>
