--- a/src/app/components/election/election.component.html
+++ b/src/app/components/election/election.component.html
@@ -1,5 +1,5 @@
 <div class="election-box">
-  <mat-horizontal-stepper [linear]="true" #stepper labelPosition="bottom">
+  <mat-horizontal-stepper [linear]="false" #stepper labelPosition="bottom">
     <mat-step [stepControl]="electionFormGroup" >
       <form [formGroup]="electionFormGroup" >
         <ng-template matStepLabel>Criar Eleição</ng-template>
