--- a/src/app/components/verifier/verifier.component.html
+++ b/src/app/components/verifier/verifier.component.html
@@ -35,4 +35,7 @@
             <tr mat-row *matRowDef="let row; columns: logger.setColumns(nAnswers);"></tr>
             <tr mat-footer-row *matFooterRowDef="logger.setColumns(nAnswers)"></tr>
         </table>
+        <div style="text-align: right; margin-top:20px">
+                <button mat-raised-button color="primary" [routerLink]="['/elections', shortName]">Detalhes {{election.name}}</button>              
+        </div>
 </div>
